--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>Sakuun</groupId>
-  <artifactId>kineJava</artifactId>
+  <artifactId>sakuun</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>kineJava</name>
 
